--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "homepage": "https://github.com/danielelder/heartsandminds#readme",
   "dependencies": {
-    "@pattern-lab/cli": "^0.0.3-alpha.0",
-    "@pattern-lab/core": "^3.0.1-alpha.0",
+    "@pattern-lab/cli": "0.0.3",
+    "@pattern-lab/core": "^3.0.1",
     "@pattern-lab/engine-mustache": "^2.0.1-alpha.0",
     "@pattern-lab/uikit-workshop": "^1.0.1-alpha.0",
     "node-sass": "^4.12.0",
